--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,8 @@ dependencies = [
     "psutil>=7.1.0",
 ]
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
 [tool.setuptools.packages.find]
 where = ["src"]
